# mxrox

./: .gitignore  Cargo.toml  Makefile  README.md  boot.s  shell.nix  x86-unknown-bare_metal.json
.cargo/: config.toml
kernel/: x86-unknown-bare_metal.json
kernel/.cargo/: config.toml
kernel/src/: terminal.rs
src/: lib.rs  main.rs
src/kernel/: heap.rs  interrupt.rs  irq.rs  mod.rs  pit.rs  ps2.rs  terminal.rs  time.rs  util.rs  vga.rs
