[lib]
crate-type = ["staticlib"]

[package]
name = "mxrox"
version = "0.1.0"
edition = "2021"

[dependencies]
stable-vec = "0.4.1"
no-std-compat = {version = "0.4.1", features = ["alloc"]}
x86_64 = {version = "0.15.2", features = ["instructions"]}
spin = "0.9.8"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"